test/syntax/pass/bug1.sync
type a = int
type b = int

let node f (x : b) = let
  rec z = x + 1
  and y = 1 fby z
  in z + y

